Updated z-index on Site Header organism to fix conflict with Drupal off-screen canvas.

--- a/design/pattern-lab/public/css/components/site-header.css
+++ b/design/pattern-lab/public/css/components/site-header.css
@@ -1,7 +1,7 @@
 .site-header {
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 500;
   display: grid;
   grid-template-columns: calc((100vw - 1700px) / 2) minmax(140px, 20%) auto calc((100vw - 1700px) / 2);
   grid-template-rows: minmax(0, 1fr);
